ignoring vscode worrkspaces

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ day*.txt
 # Backup files
 *.py.bak
 
+# VSCode workspaces
+*.code-workspace
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
