--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ day*.txt
 # VSCode workspaces
 *.code-workspace
 
+# Mac files
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
